# story_teller

./: .gitignore  .gitmodules  CMakeLists.txt  android_build.sh  story_teller.pro
android/: AndroidManifest.xml
include/app/: main_window.hpp
include/domain/: abstract_page_handler.hpp  deti_online_handler.hpp  i_page_handler.hpp  meta_info.hpp  ozornik_handler.hpp  page_handler_factory.hpp  page_loader.hpp  story_database.hpp  story_group.hpp  story_list.hpp  story_object.hpp  web_skazki_handler.hpp
src/: main.cpp  resources.qrc
src/app/: main_window.cpp  main_window.cpp_back
src/domain/: abstract_page_handler.cpp  deti_online_handler.cpp  ozornik_handler.cpp  page_handler_factory.cpp  page_loader.cpp  story_database.cpp  story_group.cpp  story_list.cpp  story_object.cpp  web_skazki_handler.cpp
src/presentation/: qml.qrc
src/presentation/qml/: AppendDialog.qml  Footer.qml  Header.qml  Main.qml  Main.qml_1  Main.qml_orig  ModifyDialog.qml
tests/: CMakeLists.txt  main.cpp
tests/resources/: audiokniga-12-podvigov-gerakla.html  audioskazka-korolevstvo-krivyh-zerkal-slushat-onlajn.html  audioskazka-vniz-po-volshebnoj-reke-slushat-onlajn.html  audioskazka-volshebnik-izumrudnogo-goroda.html  barankin.html  malenkiy_muk.html  serezik.html
